native/llama_dart_bridge/include/llama_dart.h

typedef enum llama_dart_result {
  LLAMA_DART_SUCCESS = 0,
  LLAMA_DART_ERROR_INVALID_ARGUMENT = 1,
  LLAMA_DART_ERROR_UNSUPPORTED = 2,
  LLAMA_DART_ERROR_INTERNAL = 3,
  LLAMA_DART_ERROR_MODEL_LOAD = 4,
  LLAMA_DART_ERROR_BUFFER_TOO_SMALL = 5,
  LLAMA_DART_ERROR_CONTEXT_CREATE = 6,
  LLAMA_DART_ERROR_GENERATION = 7,
  LLAMA_DART_ERROR_EMBEDDING = 8,
  LLAMA_DART_ERROR_CANCELLED = 9,
  LLAMA_DART_ERROR_RERANKING = 10,
  LLAMA_DART_ERROR_LORA = 11,
} llama_dart_result;
typedef struct llama_dart_capabilities {
  uint32_t struct_size;
  uint32_t abi_version;
  uint64_t flags;
} llama_dart_capabilities;
typedef struct llama_dart_model llama_dart_model;
typedef struct llama_dart_model_load_config {
  uint32_t struct_size;
  const uint8_t *model_path_data;
  size_t model_path_size;
  int32_t n_gpu_layers;
  uint8_t vocab_only;
  uint8_t use_mmap;
  uint8_t use_mlock;
  uint8_t check_tensors;
  uint32_t gpu_backend;
  const uint8_t *chat_template_data;
  size_t chat_template_size;
  uint8_t load_mtp;
} llama_dart_model_load_config;
typedef struct llama_dart_model_info {
  uint32_t struct_size;
  int32_t vocab_type;
  int32_t n_vocab;
  int32_t n_ctx_train;
  int32_t n_embd;
  int32_t n_embd_inp;
  int32_t n_embd_out;
  int32_t n_layer;
  int32_t n_layer_nextn;
  int32_t n_head;
  int32_t n_head_kv;
  int32_t ftype;
  uint64_t size_bytes;
  uint64_t n_params;
  int32_t token_bos;
  int32_t token_eos;
  int32_t token_eot;
  int32_t token_sep;
  int32_t token_nl;
  int32_t token_pad;
  int32_t token_mask;
  uint8_t has_encoder;
  uint8_t has_decoder;
  uint8_t is_recurrent;
  uint8_t is_hybrid;
  uint8_t is_diffusion;
  uint8_t add_bos;
  uint8_t add_eos;
  uint8_t add_sep;
} llama_dart_model_info;
typedef struct llama_dart_buffer {
  uint8_t *data;
  size_t size;
} llama_dart_buffer;
LLAMA_DART_EXPORT uint32_t llama_dart_abi_version(void);
LLAMA_DART_EXPORT const char *llama_dart_upstream_commit(void);
LLAMA_DART_EXPORT const char *llama_dart_build_flags(void);
LLAMA_DART_EXPORT const char *llama_dart_model_file_type_name(int32_t ftype);
LLAMA_DART_EXPORT const char *llama_dart_multimodal_marker(void);
/* Configures bounded in-memory native log capture. Disabled by default. */
LLAMA_DART_EXPORT llama_dart_result
llama_dart_log_set_level(uint32_t minimum_level);
/* Pops one captured log message. Empty data means the queue is drained. */
LLAMA_DART_EXPORT llama_dart_result llama_dart_log_next(
    uint32_t *out_level, llama_dart_buffer *out_message);
LLAMA_DART_EXPORT llama_dart_result llama_dart_backend_init(void);
LLAMA_DART_EXPORT llama_dart_result llama_dart_backend_free(void);
LLAMA_DART_EXPORT llama_dart_result
llama_dart_get_capabilities(llama_dart_capabilities *out_capabilities);
LLAMA_DART_EXPORT llama_dart_result llama_dart_model_load(
    const llama_dart_model_load_config *config, llama_dart_model **out_model);
/* Releases a model returned by llama_dart_model_load. */
LLAMA_DART_EXPORT void llama_dart_model_free(llama_dart_model *model);
LLAMA_DART_EXPORT llama_dart_result
llama_dart_model_get_info(const llama_dart_model *model,
                          llama_dart_model_info *out_info);
LLAMA_DART_EXPORT llama_dart_result llama_dart_model_get_description(
    const llama_dart_model *model, char *buffer, size_t buffer_size,
    size_t *out_size);
LLAMA_DART_EXPORT llama_dart_result llama_dart_model_metadata_count(
    const llama_dart_model *model, size_t *out_count);
LLAMA_DART_EXPORT llama_dart_result llama_dart_model_metadata_get(
    const llama_dart_model *model, size_t index, char *key_buffer,
    size_t key_buffer_size, size_t *out_key_size, char *value_buffer,
    size_t value_buffer_size, size_t *out_value_size);
/* Copies the caller override or model-provided default chat template. */
LLAMA_DART_EXPORT llama_dart_result llama_dart_model_get_chat_template(
    const llama_dart_model *model, llama_dart_buffer *out_template);
LLAMA_DART_EXPORT llama_dart_result llama_dart_model_tokenize(
    const llama_dart_model *model, const uint8_t *text_data, size_t text_size,
    int32_t *tokens, size_t tokens_capacity, size_t *out_token_count,
    uint8_t add_special, uint8_t parse_special);