lib/src/ffi/generated_bindings.dart

// Regenerate with: dart run ffigen --config ffigen.yaml

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Generated bindings for native/llama_dart_bridge/include/llama_dart.h.
class LlamaDartBridgeBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LlamaDartBridgeBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LlamaDartBridgeBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int llama_dart_abi_version() {
    return _llama_dart_abi_version();
  }

  late final _llama_dart_abi_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>(
        'llama_dart_abi_version',
      );
  late final _llama_dart_abi_version = _llama_dart_abi_versionPtr
      .asFunction<int Function()>();

  ffi.Pointer<ffi.Char> llama_dart_upstream_commit() {
    return _llama_dart_upstream_commit();
  }

  late final _llama_dart_upstream_commitPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'llama_dart_upstream_commit',
      );
  late final _llama_dart_upstream_commit = _llama_dart_upstream_commitPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> llama_dart_build_flags() {
    return _llama_dart_build_flags();
  }

  late final _llama_dart_build_flagsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'llama_dart_build_flags',
      );
  late final _llama_dart_build_flags = _llama_dart_build_flagsPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> llama_dart_model_file_type_name(int ftype) {
    return _llama_dart_model_file_type_name(ftype);
  }

  late final _llama_dart_model_file_type_namePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int32)>>(
        'llama_dart_model_file_type_name',
      );
  late final _llama_dart_model_file_type_name =
      _llama_dart_model_file_type_namePtr
          .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  ffi.Pointer<ffi.Char> llama_dart_multimodal_marker() {
    return _llama_dart_multimodal_marker();
  }

  late final _llama_dart_multimodal_markerPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'llama_dart_multimodal_marker',
      );
  late final _llama_dart_multimodal_marker = _llama_dart_multimodal_markerPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  llama_dart_result llama_dart_log_set_level(int minimum_level) {
    return llama_dart_result.fromValue(
      _llama_dart_log_set_level(minimum_level),
    );
  }

  late final _llama_dart_log_set_levelPtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Uint32)>>(
        'llama_dart_log_set_level',
      );
  late final _llama_dart_log_set_level = _llama_dart_log_set_levelPtr
      .asFunction<int Function(int)>();

  llama_dart_result llama_dart_log_next(
    ffi.Pointer<ffi.Uint32> out_level,
    ffi.Pointer<llama_dart_buffer> out_message,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_log_next(out_level, out_message),
    );
  }

  late final _llama_dart_log_nextPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ffi.Uint32>,
            ffi.Pointer<llama_dart_buffer>,
          )
        >
      >('llama_dart_log_next');
  late final _llama_dart_log_next = _llama_dart_log_nextPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Uint32>, ffi.Pointer<llama_dart_buffer>)
      >();

  llama_dart_result llama_dart_backend_init() {
    return llama_dart_result.fromValue(_llama_dart_backend_init());
  }

  late final _llama_dart_backend_initPtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function()>>(
        'llama_dart_backend_init',
      );
  late final _llama_dart_backend_init = _llama_dart_backend_initPtr
      .asFunction<int Function()>();

  llama_dart_result llama_dart_backend_free() {
    return llama_dart_result.fromValue(_llama_dart_backend_free());
  }

  late final _llama_dart_backend_freePtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function()>>(
        'llama_dart_backend_free',
      );
  late final _llama_dart_backend_free = _llama_dart_backend_freePtr
      .asFunction<int Function()>();

  llama_dart_result llama_dart_get_capabilities(
    ffi.Pointer<llama_dart_capabilities> out_capabilities,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_get_capabilities(out_capabilities),
    );
  }

  late final _llama_dart_get_capabilitiesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<llama_dart_capabilities>)
        >
      >('llama_dart_get_capabilities');
  late final _llama_dart_get_capabilities = _llama_dart_get_capabilitiesPtr
      .asFunction<int Function(ffi.Pointer<llama_dart_capabilities>)>();

  llama_dart_result llama_dart_model_load(
    ffi.Pointer<llama_dart_model_load_config> config,
    ffi.Pointer<ffi.Pointer<llama_dart_model>> out_model,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_model_load(config, out_model),
    );
  }

  late final _llama_dart_model_loadPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_model_load_config>,
            ffi.Pointer<ffi.Pointer<llama_dart_model>>,
          )
        >
      >('llama_dart_model_load');
  late final _llama_dart_model_load = _llama_dart_model_loadPtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_dart_model_load_config>,
          ffi.Pointer<ffi.Pointer<llama_dart_model>>,
        )
      >();

  void llama_dart_model_free(ffi.Pointer<llama_dart_model> model) {
    return _llama_dart_model_free(model);
  }

  late final _llama_dart_model_freePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<llama_dart_model>)>
      >('llama_dart_model_free');
  late final _llama_dart_model_free = _llama_dart_model_freePtr
      .asFunction<void Function(ffi.Pointer<llama_dart_model>)>();

  llama_dart_result llama_dart_model_get_info(
    ffi.Pointer<llama_dart_model> model,
    ffi.Pointer<llama_dart_model_info> out_info,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_model_get_info(model, out_info),
    );
  }

  late final _llama_dart_model_get_infoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_model>,
            ffi.Pointer<llama_dart_model_info>,
          )
        >
      >('llama_dart_model_get_info');
  late final _llama_dart_model_get_info = _llama_dart_model_get_infoPtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_dart_model>,
          ffi.Pointer<llama_dart_model_info>,
        )
      >();

  llama_dart_result llama_dart_model_get_description(
    ffi.Pointer<llama_dart_model> model,
    ffi.Pointer<ffi.Char> buffer,
    int buffer_size,
    ffi.Pointer<ffi.Size> out_size,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_model_get_description(model, buffer, buffer_size, out_size),
    );
  }

  late final _llama_dart_model_get_descriptionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_model>,
            ffi.Pointer<ffi.Char>,
            ffi.Size,
            ffi.Pointer<ffi.Size>,
          )
        >
      >('llama_dart_model_get_description');
  late final _llama_dart_model_get_description =
      _llama_dart_model_get_descriptionPtr
          .asFunction<
            int Function(
              ffi.Pointer<llama_dart_model>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Size>,
            )
          >();

  llama_dart_result llama_dart_model_metadata_count(
    ffi.Pointer<llama_dart_model> model,
    ffi.Pointer<ffi.Size> out_count,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_model_metadata_count(model, out_count),
    );
  }

  late final _llama_dart_model_metadata_countPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_model>,
            ffi.Pointer<ffi.Size>,
          )
        >
      >('llama_dart_model_metadata_count');
  late final _llama_dart_model_metadata_count =
      _llama_dart_model_metadata_countPtr
          .asFunction<
            int Function(ffi.Pointer<llama_dart_model>, ffi.Pointer<ffi.Size>)
          >();

  llama_dart_result llama_dart_model_metadata_get(
    ffi.Pointer<llama_dart_model> model,
    int index,
    ffi.Pointer<ffi.Char> key_buffer,
    int key_buffer_size,
    ffi.Pointer<ffi.Size> out_key_size,
    ffi.Pointer<ffi.Char> value_buffer,
    int value_buffer_size,
    ffi.Pointer<ffi.Size> out_value_size,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_model_metadata_get(
        model,
        index,
        key_buffer,
        key_buffer_size,
        out_key_size,
        value_buffer,
        value_buffer_size,
        out_value_size,
      ),
    );
  }

  late final _llama_dart_model_metadata_getPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_model>,
            ffi.Size,
            ffi.Pointer<ffi.Char>,
            ffi.Size,
            ffi.Pointer<ffi.Size>,
            ffi.Pointer<ffi.Char>,
            ffi.Size,
            ffi.Pointer<ffi.Size>,
          )
        >
      >('llama_dart_model_metadata_get');
  late final _llama_dart_model_metadata_get = _llama_dart_model_metadata_getPtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_dart_model>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Size>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Size>,
        )
      >();

  llama_dart_result llama_dart_model_get_chat_template(
    ffi.Pointer<llama_dart_model> model,
    ffi.Pointer<llama_dart_buffer> out_template,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_model_get_chat_template(model, out_template),
    );
  }

  late final _llama_dart_model_get_chat_templatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_model>,
            ffi.Pointer<llama_dart_buffer>,
          )
        >
      >('llama_dart_model_get_chat_template');
  late final _llama_dart_model_get_chat_template =
      _llama_dart_model_get_chat_templatePtr
          .asFunction<
            int Function(
              ffi.Pointer<llama_dart_model>,
              ffi.Pointer<llama_dart_buffer>,
            )
          >();

  llama_dart_result llama_dart_model_tokenize(
    ffi.Pointer<llama_dart_model> model,
    ffi.Pointer<ffi.Uint8> text_data,
    int text_size,
    ffi.Pointer<ffi.Int32> tokens,
    int tokens_capacity,
    ffi.Pointer<ffi.Size> out_token_count,
    int add_special,
    int parse_special,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_model_tokenize(
        model,
        text_data,
        text_size,
        tokens,
        tokens_capacity,
        out_token_count,
        add_special,
        parse_special,
      ),
    );
  }
